package pakki.dto;
public record TeamDto(Long id, String name) {}

